aggiustati path dei template e creato Verbali.tex

--- a/doc/Prova.tex
+++ b/doc/Prova.tex
@@ -1,7 +1,7 @@
 % Esempio di documento
 % da compilare con il comando pdflatex Prova.tex
 
-\include{util/hx-ambiente}
+\input{util/hx-ambiente}
 
 \author{\GG, Tizio, Caio}
 \supervisor{Bibì, Bubù}
