--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -1,5 +1,5 @@
 % Dichiarazioni di ambiente e inclusione di pacchetti
-% da usare tramite il comando \include{hx-ambiente}
+% da usare tramite il comando \input{hx-ambiente}
 
 \documentclass[a4paper,titlepage]{article}
 \usepackage{accanthis} % scegliere da http://www.tug.dk/FontCatalogue/
@@ -9,21 +9,5 @@
 \usepackage{hyperref}
 \usepackage{indentfirst}
 \usepackage{microtype}
-\usepackage{hx-macro}
-\usepackage{hx-front}
-
-\begin{document}
-
-\section{Informazioni generali}
-\begin{itemize}
-\item Data incontro: 2016-12-15;
-\item Ora inizio incontro: 14:30;
-\item Ora fine incontro: 17:00;
-\item Luogo incontro: Zucchetti S.P.A Sede di Padova, via Cittadella 7, Padova; 
-\item Durata: 2 Ore 30 Minuti;
-\item Oggetto: discussione sul capitolato d’appalto;
-\item Segretario: Luca Sgambaro; 
-\item Partecipanti: Alberto Zanatta, Giorgio Giuffrè , Luca Bergamin, Luca Sgambaro, Marco Meneghetti, Paolo Baracco.
-\end{itemize}
-
-\end{document}
+\usepackage{util/hx-macro}
+\usepackage{util/hx-front}
