--- a/doc/util/hx-front.sty
+++ b/doc/util/hx-front.sty
@@ -1,7 +1,7 @@
 % Frontespizio di ogni documento
-% da usare tramite il comando \usepackage{hx-front}
+% da usare tramite il comando \usepackage{util/hx-front}
 
-% parametrizzabile (nel file .tex) tramite i comandi:
+% parametrizzabile (nel file principale .tex) tramite i comandi:
 %    \author{\PB, \LB, \LS, ...}
 %    \supervisor{\AZ, \MM, ....}
 %    \dest{...}
