--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -1,5 +1,5 @@
 % Macro utili per uniformare il contenuto del testo
-% da usare tramite il comando \usepackage{hx-macro}
+% da usare tramite il comando \usepackage{util/hx-macro}
 
 % Progetto
 \newcommand{\swed}{SWEDesigner}
@@ -16,7 +16,7 @@
 \newcommand{\AZ}{Alberto Zanatta}
 
 % Professori e committente
-\newcommand{\TV}{Prof. Tullio Vardanega}
-\newcommand{\RC}{Prof. Riccardo Cardin}
-\newcommand{\GP}{Dott. Gregorio Piccoli}
+\newcommand{\TV}{prof. Tullio Vardanega}
+\newcommand{\RC}{prof. Riccardo Cardin}
+\newcommand{\GP}{dott. Gregorio Piccoli}
 \newcommand{\ZU}{Zucchetti S.P.A.}
