--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -2,7 +2,7 @@
 % da usare tramite il comando \usepackage{util/hx-macro}
 
 % Progetto
-\newcommand{\swed}{SWEDesigner}
+\newcommand{\proj}{SWEDesigner}
 \newcommand{\hx}{Hivex}
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
 \newcommand{\email}{\url{mailto:hivex.team@gmail.com}}
