--- a/doc/util/hx-front.sty
+++ b/doc/util/hx-front.sty
@@ -13,14 +13,14 @@
 \newcommand*{\dest}[1]{\gdef\@dest{#1}}
 \renewcommand*{\maketitle}{
 	\begin{titlepage}
-		{\raggedleft\includegraphics[width=3cm]{util/unipd_logo}\par}
-		\vspace{1cm}
 		\centering
-		{\scshape\LARGE Gruppo Hivex \par}
+		{\includegraphics[width=4cm]{util/unipd_logo}\par}
 		\vspace{1cm}
-		{\scshape\Large SWEDesigner \unskip\strut\par}
+		{\scshape\LARGE Gruppo \hx \par}
+		\vspace{1cm}
+		{\scshape \Large \proj \unskip \strut \par}
 		\vspace{1.5cm}
-		{\huge\bfseries\@title\unskip\strut\par}
+		{\huge \bfseries \@title \unskip \strut \par}
 		\vfill
 		\begin{tabular}{r | l}
 			\textbf{Versione}  & 0.1 \\
@@ -31,6 +31,6 @@
 		\end{tabular}
 		\vfill
 
-		{\large \@date\par}
+		{\large \@date \par}
 	\end{titlepage}
 }
