verbale unico sia pdf sia tex

--- a/doc/Verbali.tex
+++ b/doc/Verbali.tex
@@ -1,4 +1,4 @@
-% Tutti i verbali di riunione
+	% Tutti i verbali di riunione
 % da compilare con il comando pdflatex Verbali.tex
 
 \input{util/hx-ambiente}
@@ -33,8 +33,8 @@ Dopo varie proposte è stato scelto all'unanimità il nome \textit{Hivex}, dall'
 \end{quote}
 
 Si è scelto il capitolato C6 “SWEDesigner” proposto dall'azienda \ZU; 
-“””Si è discusso su come distribuire i ruoli ai vari componenti del gruppo. Questa decisione è stata riportata ed è consultabile nel file Ruoli.txt in Google Drive; “””
-Sono stati definiti gli strumenti e i servizi che si andranno ad utilizzare nel corso del progetto. Come strumento di organizzazione abbiamo scelto di utilizzare Asana [PARLARE DELLE MOTIVAZIONI DELLA SCELTA], per la comunicazione abbiamo scelto di utilizzare Slack [PARLARE DELLE MOTIVAZIONI DELLA SCELTA ES:INTEGRAZIONE CON LE ALTRE APP,DIAGRAMMA GANTT]. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare GitHub perché offre un ottimo servizio gratuitamente per l'open-source [...]
+“””Si è discusso su come distribuire i ruoli ai vari componenti del gruppo. Questa decisione è stata riportata ed è consultabile nel file Ruoli.txt in Google Drive\ped{G}; “””
+Sono stati definiti gli strumenti e i servizi che si andranno ad utilizzare nel corso del progetto. Come strumento di organizzazione abbiamo scelto di utilizzare Asana\ped{G} in quanto offre per esempio l' integrazione con Slack\ped{G} e si è reso necessario integrare questo strumento ad Instagantt\ped{G}, allo scopo di visualizzare in maniera immediata tramite diagrammi di Gantt\ped{G} tutti i task inseriti in Asana\ped{G}. Prima di scegliere Asana avevamo rivolto la nostra attenzione a Trello\ped{G} ma durante l'analisi delle features offerte sono sorte varie criticità. Per la comunicazione abbiamo scelto di utilizzare Slack\ped{G}: esso permette la suddivisione in diversi canali e l'integrazione di diversi servizi, come l'interfacciamento ai servizi di Asana\ped{G}. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare  GitHub\ped{G} perchè offre un ottimo servizio gratuitamente.
 
 
 
