--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
@@ -2,7 +2,7 @@
 % da compilare con il comando pdflatex Piano_di_progetto_v_x.x.x.tex
 
 \input {util/hx-ambiente}
-\version {0.0.1}
+\version{0.0.1}
 \author{\LB, \PB}
 \supervisor{\GG, \MM}
 \dest{Uso esterno}
@@ -14,14 +14,7 @@
 
 \begin{document}
 \maketitle
-	\section*{Registro delle modifiche}
-	\begin{figure}[htb]
-	\centering
-	\begin{tabular}{cp{3cm}cc}
-	Versione & Autore e Ruolo          & Descrizione       & Data       \\ \hline
-	0.0.1    & {\LB} Responsabile & Stesura scheletro & 25/12/2016 \\ \hline
-	\end{tabular}
-	\end{figure}
+\include{diario}
 \tableofcontents
 
 \section{Introduzione}
