--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_2.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_2.tex
@@ -16,15 +16,7 @@
 
 \begin{document}
 \maketitle
-\section*{Registro delle modifiche}
-\begin{figure}[htb]
-	\centering
-	\begin{tabular}{cp{3cm}cp{3cm}}
-	Versione & Autore e Ruolo       & Data       & Descrizione \\ \hline
-	0.0.2    & {\GG} Amministratore & 25/12/2016 & Iniziata la stesura dello scopo del documento e abbozzate alcune norme sulla documentazione \\ \hline
-	0.0.1    & {\MM} Amministratore & 24/12/2016 & Stesura scheletro \\ \hline
-	\end{tabular}
-\end{figure}
+\include{diario}
 \tableofcontents
 
 \section{Introduzione}
