aggiunta macro per scopo del prodotto; lavorato a norme di progetto

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
@@ -29,7 +29,7 @@
 \end{itemize}
 
 	\subsection{Scopo del prodotto}
-	[proposta: mettere una macro per questo?]
+	\scopo
 	\subsection{Glossario}
 	[idem]
 	\subsection{Riferimenti}
