--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -6,6 +6,7 @@
 \newcommand{\hx}{Hivex}
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
 \newcommand{\email}{\url{mailto:hivex.team@gmail.com}}
+\newcommand{\scopo}{Scopo del progetto \emph{\proj{}} proposto dall'azienda \ZU{} è la realizzazione di un'applicazione web che permetta di progettare applicazioni che implementino giochi da tavolo, utilizzando le notazione grafiche dell'UML. La nostra applicazione si occupa di generare il generare e fornire all'utente il codice corrispondente alla progettazione del gioco da tavolo pensato dall'utente.} % modificate a piacere :) è solo una bozza
 
 % Membri del gruppo
 \newcommand{\PB}{Paolo Baracco}
