aggiunta macro per il glossario e aggiustate macro per le versioni

--- a/doc/Prova.tex
+++ b/doc/Prova.tex
@@ -3,9 +3,13 @@
 
 \input{util/hx-ambiente}
 
-\author{\GG, Tizio, Caio}
+\version{0.0.1}
+\author{Tizio, Caio}
 \supervisor{Bibì, Bubù}
-\dest{Prof. Mario Rossi}
+\title{Prova di documento}
+\creaz{24 dicembre 2016}
+\uso{interno}
+\dest{Tutti i membri del gruppo}
 \title{Prova di documento}
 
 \begin{document}
@@ -17,7 +21,7 @@
 
 \section{Inizio}
 
-Prova di scrittura con \LaTeX, in data \today. La nostra bellissima repo è raggiungibile all'indirizzo \repo.
+Prova di scrittura con \LaTeX, in data \today. La nostra bellissima repo è raggiungibile all'indirizzo \repo. Questa è una \gloss{parola} che sta nel glossario. L'ultima versione delle norme di progetto è \NdP{}.
 
 Lorem ipsum dolor sit amet, \textbf{consectetur adipisicing elit}, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. \textit{Duis} aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
