--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -22,3 +22,6 @@
 \newcommand{\RC}{prof. Riccardo Cardin}
 \newcommand{\GP}{dott. Gregorio Piccoli}
 \newcommand{\ZU}{Zucchetti S.P.A.}
+
+% Glossario
+\newcommand{\gloss}[1]{\emph{#1}\ped{$\gamma$}}
