--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_2.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_2.tex
@@ -1,5 +1,5 @@
 % norme di progetto
-% da compilare con il comando pdflatex Norme_di_progetto_v_x.x.x.tex
+% da compilare con il comando pdflatex Interni/Norme_di_progetto/Norme_di_progetto_v_x.x.x.tex
 
 \input {util/hx-ambiente}
 \version{0.0.1}
