--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_1.tex
@@ -1,5 +1,5 @@
 % piano di progetto
-% da compilare con il comando pdflatex Piano_di_progetto_v_x.x.x.tex
+% da compilare con il comando pdflatex Esterni/Piano_di_progetto/Piano_di_progetto_v_x.x.x.tex
 
 \input {util/hx-ambiente}
 \version{0.0.1}
