impostato path relativi per compilare i file dalla cartella specifica

--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -8,6 +8,6 @@
 \usepackage[english,italian]{babel}
 \usepackage{hyperref}
 \usepackage{microtype}
-\usepackage{util/hx-macro}
-\usepackage{util/hx-front}
-\usepackage{util/hx-vers}
+\usepackage{../../util/hx-macro}
+\usepackage{../../util/hx-vers}
+\usepackage{../../util/hx-front}
