--- a/doc/util/hx-front.sty
+++ b/doc/util/hx-front.sty
@@ -16,7 +16,7 @@
 \renewcommand*{\maketitle}{
 	\begin{titlepage}
 		\centering
-		{\includegraphics[width=4cm]{util/unipd_logo}\par}
+		{\includegraphics[width=4cm]{../../util/unipd_logo}\par}
 		\vspace{1cm}
 		{\scshape\LARGE Gruppo \hx \par}
 		\vspace{1cm}
