--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
@@ -1,7 +1,7 @@
 % norme di progetto
 % da compilare con il comando pdflatex Interni/Norme_di_progetto/Norme_di_progetto_v_x.x.x.tex
 
-\input {util/hx-ambiente}
+\input {../../util/hx-ambiente}
 
 \version{0.0.3}
 \creaz{24 dicembre 2016}
@@ -130,7 +130,7 @@ Per gestire la documentazione di progetto si è pensato, innanzitutto, di creare
 
 \section{Processi organizzativi}
 
-\subsection{Processo di miglioramento} % dal documento ISO; pensavo fosse importante quindi l'ho aggiunto
+\subsection{Processo di miglioramento} % da ISO 12207-1995; pensavo fosse importante quindi l'ho aggiunto
 Man mano che si procede nel progetto, è bene stare attenti a non lasciare che le attività ripetitive degradino in qualità. Ogni processo, essendo un insieme di attività che si ripetono, deve quindi abbracciare il modello \gloss{PDCA}. % come? 
 
 \subsection{Strumenti}
