--- a/doc/Esterni/Verbali/Verbali.tex
+++ b/doc/Esterni/Verbali/Verbali.tex
@@ -34,8 +34,8 @@ il nome e il logo del gruppo e dopo varie proposte è stato scelto all 'unanimit
 	The men of experiment are like the ant, they only collect and use; the reasoners resemble spiders, who make cobwebs out of their own substance. But the bee takes the middle course, it gathers its material from the flowers of the garden and field, but transforms and digests it by a power of its own.
 \end{quote}
 
-Si è scelto il capitolato C6 “SWEDesigner” proposto dall'azienda \ZU e """”si è discusso su come distribuire i ruoli ai vari componenti del gruppo; questa decisione è stata riportata ed è consultabile nel file Ruoli.txt in Google \gloss{Drive}. “””
-Infine abbiamo scelto gli strumenti che verranno utilizzati per l'organizzazione e il versionamento: più in particolare come strumento di organizzazione abbiamo scelto di utilizzare \gloss{Asana} in quanto offre, per esempio, l'integrazione con \gloss{Slack} e si è reso necessario integrare questo strumento ad \gloss{Instagantt}, allo scopo di visualizzare in maniera immediata tramite diagrammi di \gloss{Gantt} tutti i task inseriti in \gloss{Asana}. Prima di scegliere Asana avevamo rivolto la nostra attenzione a \gloss{Trello} ma durante l'analisi delle features offerte sono sorte varie criticità. Per la comunicazione abbiamo scelto di utilizzare \gloss{Slack}: esso permette la suddivisione in diversi canali e l'integrazione di diversi servizi, come l'interfacciamento ai servizi di \gloss{Asana}. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare  \gloss{GitHub} perchè offre un ottimo servizio gratuitamente.
+Si è scelto il capitolato C6 “SWEDesigner” proposto dall'azienda \ZU e """”si è discusso su come distribuire i ruoli ai vari componenti del gruppo.
+Infine abbiamo scelto gli strumenti che verranno utilizzati per l'organizzazione e il versionamento: più in particolare come strumento di organizzazione abbiamo scelto di utilizzare \gloss{Asana} in quanto offre, per esempio, l'integrazione con \gloss{Slack} e si è reso necessario integrare questo strumento ad \gloss{Instagantt}, allo scopo di visualizzare in maniera immediata tramite il \gloss{Diagramma di Gantt} tutti i task inseriti in \gloss{Asana}. Prima di scegliere Asana avevamo rivolto la nostra attenzione a \gloss{Trello} ma durante l'analisi delle features offerte sono sorte varie criticità. Per la comunicazione abbiamo scelto di utilizzare \gloss{Slack}: esso permette la suddivisione in diversi canali e l'integrazione di diversi servizi, come l'interfacciamento ai servizi di \gloss{Asana}. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare  \gloss{GitHub} perchè offre un ottimo servizio gratuitamente.
 
 
 
@@ -50,7 +50,7 @@ Infine abbiamo scelto gli strumenti che verranno utilizzati per l'organizzazione
 	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
-Durante la riunione si è discusso degli strumenti da utilizzare nel corso del progetto. Alcuni criteri di scelta sono stati: che gli strumenti fossero “standard”; che non fossero eccessivamente complicati da utilizzare né da imparare; che si integrassero il più possibile tra di loro. Per generare la documentazione abbiamo adottato \gloss{Latex}, al fine di ottenere una maggiore automazione e modularità. Per la gestione automatizzata dei requisiti, ci è venuta in aiuto un'interfaccia open-source \gloss{PHP}/\gloss{MySQL} chiamata “\gloss{PragmaDB}”, ideata da alcuni nostri predecessori. Con \gloss{Github} si integra bene \gloss{Travis} [...] (ant, maven, gradle [...]), [\gloss{Sonarqube}, \gloss{java} o \gloss{javascript}??, \gloss{javaDoc}, IntelliJ \gloss{IDEA}...].
+Durante la riunione si è discusso degli strumenti da utilizzare nel corso del progetto. Alcuni criteri di scelta sono stati: che gli strumenti fossero “standard”; che non fossero eccessivamente complicati da utilizzare né da imparare; che si integrassero il più possibile tra di loro. Per generare la documentazione abbiamo adottato \gloss{Latex}, al fine di ottenere una maggiore automazione e modularità. Per la gestione automatizzata dei requisiti, ci è venuta in aiuto un'interfaccia open-source \gloss{PHP}/\gloss{MySQL} chiamata “\gloss{PragmaDB}”, ideata da alcuni nostri predecessori. Con \gloss{Github} si integra bene \gloss{Travis} [...] (ant, maven, gradle [...]), [\gloss{Sonarqube}, \gloss{java} o \gloss{javascript}??, \gloss{javaDoc}, \gloss{IntelliJIDEA}...].
 
 Sono state scelte le domande da proporre circa la definizione dei requisiti del progetto. In particolare, è stato pensato di porre alcune domande basilari come la scelta del linguaggio (\gloss{Java} o \gloss{Javascript}) e la scelta della lingua (italiano o inglese); inoltre, sono stati formalizzati i dubbi sorti sulla natura stessa di questo progetto così particolare.
 
@@ -67,7 +67,7 @@ Sono state scelte le domande da proporre circa la definizione dei requisiti del 
 	\item Partecipanti: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
-Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del \gloss{software} e suggerite altre di nuove. Abbiamo compreso che il dominio di programmi \gloss{software} che il nostro editor dovrà modellare dev' essere mirato ad un particolare ambiente applicativo. Sono stati chiariti alcuni dubbi e il proponente ha lasciato ampia libertà sul linguaggio da usare e sulla natura del software (applicazione web o desktop).
+Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove. Abbiamo compreso che il dominio di programmi software che il nostro editor dovrà modellare dev' essere mirato ad un particolare ambiente applicativo. Sono stati chiariti alcuni dubbi e il proponente ha lasciato ampia libertà sul linguaggio da usare e sulla natura del software (applicazione web o desktop).
 
 
 
@@ -82,7 +82,7 @@ Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardan
 	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
-Durante la riunione è stato scelto di realizzare una webapp con \gloss{HTML5},\gloss{CSS3} e JavaScript per il lato \gloss{client} che genera codice \gloss{Java} e dopo varie proposte il dominio applicativo del \gloss{software} da realizzare è risultato "giochi da tavolo". 
+Durante la riunione è stato scelto di realizzare una webapp con \gloss{HTML5},\gloss{CSS3} e JavaScript per il \gloss{lato client} che genera codice \gloss{Java} e dopo varie proposte il dominio applicativo del software da realizzare è risultato "giochi da tavolo". 
 Sono stati analizzati i casi d' uso generali che hanno fatto sorgere domande esposte il giorno seguente al \GP.
 
 
@@ -98,7 +98,7 @@ Sono stati analizzati i casi d' uso generali che hanno fatto sorgere domande esp
 	\item Partecipanti: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
-Durante la riunione è stato chiarito il concetto di stereotipo e dove poter utilizzarlo all'interno del progetto; inoltre è sorta la necessità di dover generare anche l'interfaccia del prodotto (gioco da tavolo) generato dal \gloss{software}. Il diagramma delle attività sarà ispirato al diagramma di Nassi–Shneiderman utilizzando una rappresentazione "a blocchi".
+Durante la riunione è stato chiarito il concetto di stereotipo e dove poter utilizzarlo all'interno del progetto; inoltre è sorta la necessità di dover generare anche l'interfaccia del prodotto (gioco da tavolo) generato dal software. Il diagramma delle attività sarà ispirato al \gloss{diagramma Nassi–Shneiderman} utilizzando una rappresentazione "a blocchi".
 
 
 
@@ -114,4 +114,18 @@ Durante la riunione è stato chiarito il concetto di stereotipo e dove poter uti
 \end{itemize}
 
 Durante la riunione sono stati analizzati una parte dei casi d' uso e dei requisiti sorti dalla riunione precedente col proponente.
+
+
+\section{Riunione del 23 dicembre 2016}
+
+\begin{itemize}
+	\item Orario: 15:00 - 18:00;
+	\item Durata: 3 ore;
+	\item Luogo incontro: 2AB45 di Torre Archimede; 
+	\item Oggetto: discussione dei casi d' uso;
+	\item Segretario: \PB; 
+	\item Partecipanti: \AZ, \GG, \LB, \LS, \MM, \PB.
+\end{itemize}
+
+Durante la riunione sono stati analizzati i casi d' uso, in particolar modo riguardo la parte del diagramma delle attività.
 \end{document}
